added language switcher, removed logos

--- a/zwc-kalkulator.html
+++ b/zwc-kalkulator.html
@@ -17,13 +17,30 @@
   -->
 <div class="column">
   <div class="panel">
-    <div class="panel-header">
-      <img class="float-right" src="https://ebm.si/p/zwcities-calc/logo_zwe.png" alt="ZWE logo">
-      <img class="float-right" src="https://ebm.si/p/zwcities-calc/logo_hnuti_duha.gif" alt="HD logo">
-      <img class="float-right" src="https://ebm.si/minlogo.png" alt="EBM logo">
- 
-      <div class="panel-title h5 mt-10" id="main-title">Zero Waste Cities calculator</div>
-      <div class="panel-subtitle" id="main-subtitle">What are the potential savings?</div>
+    <div class="panel-header columns col-gapless">
+      <div class="column col-9">
+        <div class="panel-title h5 mt-10" id="main-title">Zero Waste Cities calculator</div>
+        <div class="panel-subtitle" id="main-subtitle">What are the potential savings?</div>
+      </div>
+
+      <div class="column col-3 tooltip tooltip-bottom" id="lang-switcher-block" data-tooltip="Choose language">
+        <form class="">
+          <div class="form-group">
+            <select class="form-select select-sm" id="lang-switcher">
+              <option selected value="en">English</option>
+              <option value="bg">Bulgarian</option>
+              <option value="cs">Czech</option>
+              <option value="sl">Slovenian</option>
+            </select>
+          </div>
+        </form>
+      </div>
+
+      <!-- <div class="column col-4">
+        <img src="https://ebm.si/p/zwcities-calc/logo_zwe.png" alt="ZWE logo">
+        <img src="https://ebm.si/p/zwcities-calc/logo_hnuti_duha.gif" alt="HD logo">
+        <img src="https://ebm.si/minlogo.png" alt="EBM logo">
+      </div> -->
     </div>
 
     <nav class="panel-nav clearfix">
