take ppp into account

--- a/zwc-kalkulator.html
+++ b/zwc-kalkulator.html
@@ -83,12 +83,47 @@
             <option id="t1-amb2">Medium</option>
             <option id="t1-amb3">High</option>
           </select>
+
+          <div class="vspacer"></div>
+          <div class="vspacer"></div>
+          <span id="t1-intro2" class="">Select the country if you wish to improve the cost comparisons:</span>
+          <select class="form-select" id="ppp">
+            <option selected id="t1-ctry0">Other</option>
+            <option id="t1-ctry1">Austria</option>
+            <option id="t1-ctry2">Belgium</option>
+            <option id="t1-ctry3">Czech Republic</option>
+            <option id="t1-ctry4">Denmark</option>
+            <option id="t1-ctry5">Estonia</option>
+            <option id="t1-ctry6">Finland</option>
+            <option id="t1-ctry7">France</option>
+            <option id="t1-ctry8">Germany</option>
+            <option id="t1-ctry9">Greece</option>
+            <option id="t1-ctry10">Hungary</option>
+            <option id="t1-ctry11">Iceland</option>
+            <option id="t1-ctry12">Ireland</option>
+            <option id="t1-ctry13" value="it">Italy</option>
+            <option id="t1-ctry14">Latvia</option>
+            <option id="t1-ctry15">Lithuania</option>
+            <option id="t1-ctry16">Luxembourg</option>
+            <option id="t1-ctry17">Netherlands</option>
+            <option id="t1-ctry18">Norway</option>
+            <option id="t1-ctry19">Poland</option>
+            <option id="t1-ctry20">Portugal</option>
+            <option id="t1-ctry21">Slovak Republic</option>
+            <option id="t1-ctry22" value="si">Slovenia</option>
+            <option id="t1-ctry23">Spain</option>
+            <option id="t1-ctry24">Sweden</option>
+            <option id="t1-ctry25">Switzerland</option>
+            <option id="t1-ctry26">Türkiye</option>
+            <option id="t1-ctry27">United Kingdom</option>
+          </select>
+
         </div>
       </form>
       
       <div class="vspacer2"></div>
 
-      <p id="t1-note">The data you submit through this form will be used to calculate potential savings through comparable scenarios and suggest further action for waste management optimization. The form contains default values which are 2017 EU-28 averages. You can modify these values in the next few steps.</p>
+      <p id="t1-note">The data you submit through this form will be used to calculate potential savings through comparable scenarios and suggest further action for waste management optimization. It will take purchasing power parity into account if you selected a country.<br>The form contains default values which are 2017 EU-28 averages. You can modify these values in the next few steps.</p>
     </div>
 
     <div class="panel-body d-none" data-idx="1">
